# libcxlmi

./: meson.build  meson_options.txt
.github/workflows/: analysis.yml  coverity.yml  run-tests.yml
docs/: FM-API.md  Generic-Component-Commands.md  How-To-Add-A-Command.md  Memory-Device-Commands.md  Supported-Commands.md
examples/: cxl-mctp.c  cxl-vfio.c  examples.h  fmapi-mctp.c  meson.build  test-fmapi.c
examples/ctypes/: identify.py  test_fmapi.py
src/: libcxlmi.h  meson.build
src/cxlmi/: api-types.h  commands.c  cxlmi.c  private.h  vfio.c
tests/: feature_cmds_test_prog.c  generate_tests.py  meson.build  run_tests.py  suites.py  test-utils.h  unit_tests.c
tests/qemu-tests/: README.md  generate_tests.py  run_tests.py  suites.py
tests/qemu-tests/inputs/: fmapi-commands.xml
